bug/dev-30/Component jumps to top of page

--- a/ui.frontend/src/components/PricePlan/PricePlan.css
+++ b/ui.frontend/src/components/PricePlan/PricePlan.css
@@ -2,7 +2,7 @@
 /* CONTAINER */
 .pricing-container {
   text-align: center;
-  padding: 60px 60px;
+  padding: 30px 0px;
   font-family: Arial, sans-serif;
   background: #f5f7fb;
 }
@@ -67,12 +67,14 @@
   transform: translateX(24px);
 }
 
+
+
 /* CARDS GRID */
 .plans {
   display: grid;
-  gap: 25px;
-  max-width: 1300px;
-  margin: 0 auto;
+  gap: 60px;
+  max-width: 1800px;
+  margin: 0 12%;
   align-items: stretch;
 
   /* Mobile first */
@@ -92,13 +94,15 @@
   flex-direction: column;
   justify-content: space-between;
 
-  width: 70%;
+  width: 100%;
   max-width: 280px;   
   margin: 0 auto;     
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
+
 }
 
 .card:hover {
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.1);
   transform: translateY(-5px);
 }
 
@@ -123,13 +127,14 @@
 /* TEXT */
 .card h4 {
   font-size: 16px;
-  margin-bottom: 10px;
+  margin-bottom: 1px;
   color: #2b5dab;
 }
 
 .card h2 {
   font-size: 26px;
-  margin-bottom: 5px;
+  margin-bottom: 3px;
+  padding: 0;
 }
 
 .card h2 span {
@@ -141,19 +146,19 @@
 .card p {
   font-size: 14px;
   color: #666;
-  margin-bottom: 15px;
+  margin-bottom: 7px;
 }
 
 /* FEATURES */
 .card ul {
   list-style: none;
   padding: 0;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .card ul li {
   font-size: 14px;
-  margin-bottom: 8px;
+  margin-bottom: 4px;
   color: #333;
 }
 
@@ -254,6 +259,7 @@
 @media (max-width: 767px) {
   .plans {
     grid-template-columns: repeat(1,1fr);
+    margin: 0 auto;
   }
 
   .pricing-container {
@@ -267,6 +273,7 @@
   .bottom-actions {
     flex-direction: column;
     align-items: center;
+    margin-top: 20%;
   }
 
   .outline-btn {
@@ -277,5 +284,11 @@
     width: 70%;
     max-width: 260px;
   }
+  .card {
+    width: 80%;
+    max-width: 280px;
+    margin: 0 auto;
+    
+}
   
 }
